<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.rares.miner49er.HomeScrollingActivity"
>
    <item
            android:id="@+id/action_add"
            android:orderInCategory="100"
            android:title="@string/action_add"
            android:icon="@drawable/icon_path_add"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/action_edit"
            android:orderInCategory="100"
            android:title="@string/action_edit"
            android:icon="@drawable/icon_path_edit"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/action_remove"
            android:orderInCategory="100"
            android:title="@string/action_remove"
            android:icon="@drawable/icon_path_remove"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/action_details"
            android:orderInCategory="100"
            android:title="@string/action_details"
            android:icon="@drawable/icon_path_details"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/action_favorite"
            android:orderInCategory="100"
            android:title="@string/action_add_favorite"
            android:icon="@drawable/icon_path_star_empty"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/action_search"
            android:orderInCategory="100"
            android:title="@string/action_search"
            android:icon="@drawable/icon_path_search"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/action_filter"
            android:orderInCategory="100"
            android:title="@string/action_filter"
            android:icon="@drawable/icon_path_filter"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/action_sort"
            android:orderInCategory="100"
            android:title="@string/action_sort"
            android:icon="@drawable/icon_path_sort"
            app:showAsAction="never"
    />
</menu>