<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".domain.projects.ui.actions.edit.ProjectEditFormFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="54dp"
        android:id="@+id/project_edit_content_scroll"
        android:paddingTop="@dimen/projects_list_item_background_stroke_width"
        android:paddingBottom="@dimen/projects_list_item_background_stroke_width"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/content_container"
    >

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_name_input_layout"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/hint_issue_project_name"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/issue_name_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/project_name_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/issue_name_edit_text"
                    android:enabled="false"
                    android:hint="@string/hint_time_entry_issue_name"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/owner_input_layout"
                app:layout_constraintTop_toBottomOf="@id/issue_name_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/owner_edit_text"
                    android:enabled="false"
                    android:hint="@string/hint_time_entry_owner"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hours_input_layout"
                app:layout_constraintTop_toBottomOf="@id/owner_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hours_edit_text"
                    android:hint="@string/hint_time_entry_hours"
                    android:inputType="number"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/work_date_input_layout"
                app:layout_constraintTop_toBottomOf="@id/hours_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/work_date_edit_text"
                    android:inputType="date"
                    android:hint="@string/hint_time_entry_work_date"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comments_input_layout"
                app:layout_constraintTop_toBottomOf="@id/work_date_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/comments_edit_text"
                    android:inputType="textMultiLine"
                    app:counterEnabled="true"
                    app:counterMaxLength="256"
                    android:hint="@string/hint_time_entry_comments"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_added_input_layout"
                app:layout_constraintTop_toBottomOf="@id/comments_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_added_edit_text"
                    android:enabled="false"
                    android:hint="@string/hint_date_added"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/helper_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helper_required"
                android:textColor="@color/indigo.100"
                android:textSize="@dimen/list_item_secondary_text_size"
                android:layout_marginEnd="@dimen/sv_margin"
                android:layout_marginRight="@dimen/sv_margin"
                android:layout_marginTop="@dimen/sv_margin"
                app:layout_constraintTop_toBottomOf="@id/date_added_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:layout_marginLeft="@dimen/sv_margin"
                android:layout_marginStart="@dimen/sv_margin"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_add"
                android:layout_marginRight="@dimen/sv_margin"
                android:layout_marginEnd="@dimen/sv_margin"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toStartOf="@id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@id/helper_text"
                app:icon="@drawable/icon_path_add"
                app:strokeColor="@color/color_selector_outline"
                app:strokeWidth="0dp"
                style="@style/Widget.MaterialComponents.Button"
        />

        <View
                android:id="@+id/issue_edit_bottom_spacer"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@id/btn_cancel"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>