<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".domain.projects.ui.actions.edit.ProjectEditFormFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="54dp"
        android:id="@+id/project_edit_content_scroll"
        android:paddingTop="@dimen/projects_list_item_background_stroke_width"
        android:paddingBottom="@dimen/projects_list_item_background_stroke_width"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/project_edit_horizontal_guideline_top"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp"
        />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/project_edit_horizontal_guideline_bottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintGuide_end="16dp"
                android:orientation="horizontal"
        />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_name_input_layout"
                app:layout_constraintTop_toBottomOf="@id/project_edit_horizontal_guideline_top"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_name_input_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_name"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/project_short_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/project_name_input_layout"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"

        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_short_name_input_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_short_name"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/project_description_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/project_short_name_input_layout"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"

        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_description_input_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_description"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/project_icon_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/project_description_input_layout"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"

        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_icon_input_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_icon"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/project_owner_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/project_icon_input_layout"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                app:helperTextEnabled="false"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"

        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_owner_input_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_owner"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_simple_outline"
                android:layout_margin="@dimen/sv_margin"
                app:layout_constraintTop_toBottomOf="@+id/project_owner_input_layout"
        >

            <TextView
                    android:id="@+id/project_team_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_project_team"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/color_selector_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />

            <fragment
                    android:name="org.rares.miner49er.domain.users.userlist.UserListFragment"
                    android:id="@+id/users_rv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    android:layout_margin="@dimen/sv_margin"
                    app:layout_constraintTop_toBottomOf="@+id/project_team_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
                android:id="@+id/project_edit_helper_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helper_required"
                android:textColor="@color/indigo.100"
                android:textSize="@dimen/list_item_secondary_text_size"
                android:layout_marginEnd="@dimen/sv_margin"
                android:layout_marginRight="@dimen/sv_margin"
                android:layout_marginTop="@dimen/sv_margin"
                app:layout_constraintTop_toBottomOf="@id/user_list_container"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_add_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:layout_marginLeft="@dimen/sv_margin"
                android:layout_marginStart="@dimen/sv_margin"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/project_edit_helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_add"
                android:layout_marginRight="@dimen/sv_margin"
                android:layout_marginEnd="@dimen/sv_margin"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toStartOf="@id/btn_cancel_add_project"
                app:layout_constraintTop_toBottomOf="@id/project_edit_helper_text"
                app:icon="@drawable/icon_path_add"
                app:strokeColor="@color/color_selector_outline"
                app:strokeWidth="0dp"
                style="@style/Widget.MaterialComponents.Button"
        />

        <View
                android:id="@+id/project_edit_bottom_spacer"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="@id/btn_cancel_add_project"
                app:layout_constraintTop_toBottomOf="@id/btn_cancel_add_project"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>